eck-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eck
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: elastic-ingress
  namespace: eck
spec:
  ingressClassName: nginx
  rules:
    - host: elasticsearch.devsecops.net.au
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quickstart-es-http
                port:
                  number: 9200
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: kibana-ingress
  namespace: eck
spec:
  ingressClassName: nginx
  rules:
    - host: kibana.devsecops.net.au
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quickstart-kb-http
                port:
                  number: 5601
