nip-io-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  labels:
    run: nginx
  name: nginx-deploy-main
spec:
  replicas: 1
  selector:
    matchLabels:
      run: nginx-main
  template:
    metadata:
      labels:
        run: nginx-main
    spec:
      containers:
        - image: nginx
          name: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-deploy-main
  namespace: dev
  labels:
    run: nginx
spec:
  type: ClusterIP
  selector:
    run: nginx-main
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-1
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
    - host: nginx.172.16.176.200.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-deploy-main
                port:
                  number: 80
  tls:
    - hosts:
        - nginx.172.16.176.200.nip.io
    - secretName: api-tls-secret
